--- a/styles.css
+++ b/styles.css
@@ -37,12 +37,12 @@ body, a{
     justify-content: space-between;
     text-align: center;
     align-items: center;
-    height: 70px;
+    height: 60px;
     width: 1170px;
     padding: 1.5rem 0;
     position: fixed;
     background-color: #000;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
 }
 
 
@@ -96,7 +96,8 @@ body, a{
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    
+    margin-bottom: 2px;
+        
 }
 
 .home-img .logo{
@@ -108,7 +109,7 @@ body, a{
     border: 1px solid var(--color-border);
     margin-top: 10px;
     border-radius: 10px;
-   box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
 }
 
 
@@ -133,7 +134,6 @@ body, a{
     max-width: 1170px;
     height: 100vh;
     display: flex;
-    justify-content: space-around;
     align-items: center;
     text-align: center;
     flex-direction: column;
@@ -141,21 +141,24 @@ body, a{
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
     background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    margin-top: 10px;
-    padding-top: 10px;
+    padding-top: 60px;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    box-shadow: 0 0 8px 0.5px white;
 }
 
 .ability-estudos{
-    width: 1000px;
-    height: 300px;
-    border: 1px solid var(--color-border);
-    border-radius: 10px;
+    width: 80vw;
+    height: 230px;
+
     cursor: pointer;
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
 .ability-estudos-title{
     font-size: 25px;
-    margin-bottom: 25px;
-    margin-top: 35px;
+    margin-bottom: 10px;
+    margin-top: 25px;
     color: rgba(222, 224, 223, 0.979);
 }
 .ability-estudos-skill {
@@ -166,8 +169,8 @@ body, a{
 }
 
 .skill-completa {
-    width: 110px;
-    height: 130px;
+    width: 100px;
+    height: 120px;
     margin: 20px;
     border: 1px solid var(--color-border);
     border-radius: 10px;
@@ -181,17 +184,15 @@ body, a{
 }
 
 .ability-estudando{
-    width: 1000px;
-    height: 300px;
-    border: 1px solid var(--color-border);
-    border-radius: 10px;
+    width: 80vw;
+    height: 230px;
     cursor: pointer;
 }
 
 .ability-estudando-skill{
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    margin-top: 15px;
 }
 .skill-incompleta{
     width: 120px;
@@ -204,34 +205,40 @@ body, a{
 .projetos{
     max-width: 1170px;
     height: 100vh;
-    margin-top: 50px;
+    margin-top: 2px;
     display: flex;
     flex-direction: column;
     text-align: center;
-    
+    padding-top: 20px;
+    text-align: center;
+    margin: 0 auto;
 }
 
 .box{
     width: 1170px;
     height: 100vh;
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
     text-align: center;
-    align-content: space-around;
+    flex-direction: row;
+    align-content: flex-start;
     margin: 0 auto;
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
     background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    margin-top: 20px;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 0 8px 0.5px white;
 }
 .card{
-    margin-top: 90px;
-    width: 200px;
-    height: 250px;
+    padding-top: 50px;
+    width: 150px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    margin: 0 auto;
 }
 
 #link{
@@ -244,7 +251,7 @@ body, a{
 }
 .foto-logo{
     border-radius: 12px;
-    width: 200px;
+    width: 150px;
     height: 250px;
     
 }
@@ -254,8 +261,8 @@ body, a{
 
 .location{
     height: 100vh;
-    padding: 40px 0;
-    margin-top: 25px;
+    padding: 55px ;
+    margin-top: 5px;
     
 }
 
@@ -263,7 +270,7 @@ body, a{
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
     background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    padding: 40px;
+    padding: 15px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -305,7 +312,7 @@ body, a{
 }
 .location .maps iframe{
     width: 100%;
-    height: 70vh;
+    height: 65vh;
     margin-top: 10px;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -320,7 +327,7 @@ footer{
 
 footer .footer{
     color:var(--secondary-color);
-    margin-bottom: 200px;
+    margin-bottom: 10px;
 }
 
 
@@ -347,24 +354,32 @@ footer .footer{
         display: none;
     }
 
-/*-----------HOME-----------*/
+    /*-----------HOME-----------*/
     .home{
         width: 100vw;
-        height: 50vh;
+        height: 100vh;
     }
     .home-img{
         display: none;
     }
+    .home-text{
+        font-size: 14px;
+    }
 
-/*----------ABILITY----------*/
+    /*----------ABILITY----------*/
     .ability{
         width: 100vw;
-        
+        height: 100vh;
+        flex-wrap: wrap;
     }
     .ability-estudos, .ability-estudando{
         width: 500px;
         height: 170px;
-        border: none;
+        flex-wrap: wrap;
+        align-content: flex-start;
+        align-items: center;
+        text-align: center;
+        flex-direction: row;
     }
     .ability-estudos-title{
         font-size: 16px;
@@ -379,24 +394,27 @@ footer .footer{
         padding: 4px;
     }
 
-/*-----------PROJETOS ---------*/
+    /*-----------PROJETOS ---------*/
 
     .projetos{
         width: 100vw;
-        height: 50vh;
+        height: 100vh;
     }
     .box{
         width: 100vw;
-        
+        height: 100vh;
+        flex-wrap: wrap;
+        align-items: center;
     }
     .card{
-        margin-top: 50px;
-        width: 50px;
-        height: 100px;
+        margin-top: 10px;
+        width: 100px;
+        height: 130px;
+        
     }
     .foto-logo{
-        width: 50px;
-        height: 100px;
+        width: 100px;
+        height: 130px;
     }
     #link{
         font-size: 14px;
@@ -407,6 +425,7 @@ footer .footer{
 
     .location{
         width: 100vw;
+        height: 100vh;
     }
     .location .icons{
         padding: 20px;
@@ -422,5 +441,55 @@ footer .footer{
     }
     .location .icons .info .text span{
         font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 390px){
+    .header{
+        width: 100vw;
+    }
+
+    /*---------------home-------------*/
+
+    .home{
+        width: 100vw;
+        height: 100vh;
+    }
+
+    .ability-estudos .ability-estudando{
+        border: none;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 0 auto;
+    }
+    .skill-completa{
+        width: 35px;
+        height: 45px;
+    }
+    /*---------------ability-------------*/
+
+    .ability{
+        width: 100vw;
+        height: 100vh;
+        flex-wrap: wrap;
+    }
+
+    /*--------------projetos--------------*/
+
+    .projetos{
+        width: 100vw;
+        height: 100vh;
+    }
+    .box{
+        margin: 0 auto;
+        border: 2px solid var(--color-border);
+
+    }
+    .location{
+        width: 100vw;
+    }
+    .location .icons .info .icon{
+        display: none;
     }
 }
