--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     --text-color: rgb(163, 167, 164);
     --bg-color: #000;
     --color-indent: #b2caaeea;
-    --color-border:rgb(218, 190, 190);
+    --color-border:rgba(4, 32, 19, 0.527);
 
 }
 
@@ -23,7 +23,6 @@ body, a{
     color: var(--text-color);
     text-decoration: none;
     transition: .4s;
-    
 }
 .container{
     max-width: 1170px;
@@ -42,7 +41,9 @@ body, a{
     padding: 1.5rem 0;
     position: fixed;
     background-color: #000;
-    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
+
 }
 
 
@@ -90,14 +91,19 @@ body, a{
 /*--------------FIM HEADER-------------*/
 /*--------------HOME-------------*/
 
+.central-page{
+  
+background-color: #4cbb76;
+
+    
+}
 .home{
     height: 100vh;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    margin-bottom: 2px;
-        
+    
 }
 
 .home-img .logo{
@@ -127,11 +133,12 @@ body, a{
     cursor: pointer;
     margin: 10px;
 }
+
 /*-----------------HABILIDADES-------------*/
 
 
 .ability{ 
-    max-width: 1170px;
+    width: 100%;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -140,11 +147,11 @@ body, a{
     border-radius: 10px;
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
-    background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    padding-top: 60px;
-    border: 2px solid var(--color-border);
+    background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125);     
+    border: 1px solid var(--color-border);
     border-radius: 10px;
-    box-shadow: 0 0 8px 0.5px white;
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
+    margin-top: 70px;
 }
 
 .ability-estudos{
@@ -152,7 +159,7 @@ body, a{
     height: 230px;
 
     cursor: pointer;
-    margin-top: 20px;
+    
     margin-bottom: 30px;
 }
 .ability-estudos-title{
@@ -203,7 +210,7 @@ body, a{
 /*---------------------PROJETOS----------------------*/
 
 .projetos{
-    max-width: 1170px;
+    width: 100%;
     height: 100vh;
     margin-top: 2px;
     display: flex;
@@ -215,21 +222,21 @@ body, a{
 }
 
 .box{
-    width: 1170px;
-    height: 100vh;
+    width: 100%;
+    height: 195vh;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
     flex-direction: row;
     align-content: flex-start;
-    margin: 0 auto;
+    margin-top: 55px;
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
     background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    border: 2px solid var(--color-border);
+    border: 1px solid var(--color-border);
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 0 8px 0.5px white;
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
 }
 .card{
     padding-top: 50px;
@@ -260,20 +267,24 @@ body, a{
 /*-----------------------LOCATION------------------------*/
 
 .location{
+    width: 100%;
     height: 100vh;
-    padding: 55px ;
+    padding: 5px ;
     margin-top: 5px;
-    
+
 }
 
 .location .icons{
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
     background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    padding: 15px;
-    width: 100%;
+    padding: 15px;  
     display: flex;
     justify-content: space-between;
+    border: 1px solid var(--color-border);
+    border-radius: 10px;
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
+    margin-top: 70px;
 }
 .location .icons .info{
     display: flex;
@@ -322,12 +333,6 @@ body, a{
 
 footer{
     text-align: center;
-    
-}
-
-footer .footer{
-    color:var(--secondary-color);
-    margin-bottom: 10px;
 }
 
 
