--- a/styles.css
+++ b/styles.css
@@ -229,6 +229,7 @@ body, a{
     padding-top: 20px;
     text-align: center;
     margin: 0 auto;
+    
 }
 
 .box{
@@ -296,44 +297,72 @@ body, a{
 
 .location{
     width: 100%;
-    height: 95vh;
-    padding: 2px ;
-    margin-top: 5px;
-
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 20px;
+    
 }
-
-.location .icons{
+.contatos{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+    flex-direction: row;
+    align-content: flex-start;
+    justify-content: center;
+    margin-top: 55px;
     background: #216c1a;
     background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
     background: linear-gradient(to right, #01271125, #8dcf9ac0, #01271125); 
-    padding: 15px;  
-    display: flex;
-    justify-content: space-between;
     border: 1px solid var(--color-border);
     border-radius: 10px;
+    padding: 8px;
     box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
-    margin-top: 62px;
-    margin-bottom: 5px;
 }
-.location .icons .info{
+
+ .icons{
+    background: #216c1a;
+    background: -webkit-linear-gradient(to right, #040e09, #01130c, #040e09);
+    background: linear-gradient(to right, #01271125, #181a1800, #01271125); 
+    width: 100%;
+    padding: 10px;  
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 0 8px 0.5px rgb(2, 2, 2);    
+
+}
+.icons .info{
     display: flex;
     align-items: center;
-    margin-top: 5px;
+    
 }
-.location .icons .info .nome{
+ .icons .info .nome{
     width: 20px;
 }
-.location .icons .info .icon{
+ .icons .info .icon{
     margin-right: 10px;
-    border: 1.8px solid var(--color-border);
+    border: 1.5px solid var(--color-border); 
     border-radius: 10px;
     width: 50px;
     height: 50px;
-    padding: 10px;
+    padding: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #000;
+    cursor: pointer;
 }
+.icons .info .icon:hover{
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644); 
+}
+
 .location .icons .info .text span{
     display: block;
     font-size: 14px;
@@ -352,17 +381,28 @@ body, a{
 }
 .location .maps iframe{
     width: 100%;
-    height: 65vh;
-    margin-top: 10px;
+    height: 60vh;
+    margin-top: 5px;
     border-radius: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    border: 1px solid #000;
 }
 /*----------------------FOOTER-------------------------*/
 
 
 footer{
+    width: 100%;
+    height: 30px;
+    display: flex;
     text-align: center;
-    margin-bottom: 5px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: rgb(245, 234, 234);
+    font-weight: 500;
+    letter-spacing: 1px;
+    bottom: 0;
+
 }
 
 
@@ -479,6 +519,8 @@ footer{
     }
 }
 
+
+/* --------------Responsive Telemóvel-------------*/
 @media screen and (max-width: 390px){
     .header{
         width: 100vw;
@@ -521,10 +563,26 @@ footer{
         border: 2px solid var(--color-border);
 
     }
+    .card{
+        width: 80px;
+        height: 100px;
+        align-items: center;
+        justify-content: center;
+        font-size: 12px;
+    }
+    .foto-logo{
+        display: none;
+    }
+
+    /*----------localização-------------*/
     .location{
         width: 100vw;
     }
     .location .icons .info .icon{
         display: none;
+    }
+
+    footer{
+        font-size: 12px;
     }
 }
