--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 :root{
     --color-primary:#fff;
     --secondary-color: #4cbb76;
-    --text-color: rgb(163, 167, 164);
+    --text-color: rgb(152, 155, 152);
     --bg-color: #000;
     --color-indent: #b2caaeea;
     --color-border:rgba(4, 32, 19, 0.527);
@@ -103,8 +103,8 @@ body, a{
 }
 
 .home-img .logo{
-    width: 350px;
-    height: 400px;
+    width: 400px;
+    height: 450px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -112,24 +112,70 @@ body, a{
     margin-top: 10px;
     border-radius: 10px;
     box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
+    background-color: #4cbb76;
 }
 
-
+/* ----- home text-----*/
 .home-text{
-    width: 400px;
-    height: 400px;
+    width: 600px;
+    height: 500px;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
-    font-size: 20px;
+    
 }
-.home-card-title{
-    cursor: pointer;
-    margin: 10px;
+.home-text .estatico{
+    display: inline-flex;
+    
+}
+.home-text .estatico{
+    font-size: 60px;
+    font-weight: 500;
+    
+}
+.home .dinamico{
+    margin-left: 15px;
+    line-height: 90px;
+    height: 90px;
+    overflow: hidden;
+}
+.dinamico li{
+    color: var(--secondary-color);
+    list-style: none;
+    font-size: 61px;
+    font-weight: 400;
+    left: 0;
+    position: relative;
+    top: 0;
+    animation: slide 6s steps(4) infinite;
+}
+@keyframes slide{
+    100%{
+        top: -360px;
+    }
+}
+.dinamico li span::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    border-left: 2PX solid var(--secondary-color);
+    animation: typing 1.5s steps(15) infinite;
+    background: var(--bg-color);
+}
+.dinamico li span{
+    position: relative;
+
+}
+@keyframes typing{
+    100%{
+        left: 100%;
+        margin: 0 -35px 0 35px;
+    }
 }
 
+/*--------------FIM HOME-------------*/
 /*--------------HABILIDADES------------------*/
 
 .habilidades{
@@ -171,7 +217,7 @@ body, a{
     font-size: 25px;
     margin-bottom: 10px;
     margin-top: 25px;
-    color: rgba(222, 224, 223, 0.979);
+    color: rgb(198, 201, 198);
 }
 .ability-estudos-skill {
     display: flex;
@@ -288,7 +334,6 @@ body, a{
     border-radius: 12px;
     width: 130px;
     height: 230px;
-    background-color: #4cbb76;
 }
 
 
@@ -408,7 +453,11 @@ footer{
 
 
 
-/*------------------------RESPONSIVE----------------*/
+/*-------------------------------
+
+RESPONSIVE
+
+----------------------------------*/
 
 
 
@@ -448,6 +497,7 @@ footer{
         height: 100vh;
         flex-wrap: wrap;
     }
+   
     .ability-estudos, .ability-estudando{
         width: 500px;
         height: 170px;
@@ -456,6 +506,7 @@ footer{
         align-items: center;
         text-align: center;
         flex-direction: row;
+        margin-top: 20px;
     }
     .ability-estudos-title{
         font-size: 16px;
@@ -483,18 +534,20 @@ footer{
         align-items: center;
     }
     .card{
-        margin-top: 10px;
+        margin-top: 30px;
         width: 100px;
         height: 130px;
         
     }
     .foto-logo{
-        width: 100px;
-        height: 130px;
+        width: 90px;
+        height: 120px;
+        margin: 0 auto;    
     }
     #link{
         font-size: 14px;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
+        margin-top: -10px;
     }
 
     /*-----------CONTATOS ---------*/
@@ -522,9 +575,12 @@ footer{
 
 
 /* --------------Responsive Telemóvel-------------*/
+
+
 @media screen and (max-width: 390px){
     .header{
         width: 100vw;
+        justify-content: center;
     }
 
     /*---------------home-------------*/
