--- a/styles.css
+++ b/styles.css
@@ -320,6 +320,7 @@ body, a{
     transition: transform 0.5s;
     background: rgba(5, 20, 6, 0.897);
     overflow: hidden;
+    backdrop-filter: blur(5px);
 }
 
 .card:hover{
@@ -332,10 +333,13 @@ body, a{
     display: inline-block;
     padding: 12px 20px;
     background: #2e3a2c6e;
-    border-radius: 15px;
+    border-radius: 10px;
     border: 2px solid var(--color-border);
 }
-
+.projeto .card a:hover{
+    box-shadow: 0 0 8px 0.5px rgba(255, 255, 255, 0.644);
+    border: 1px solid var(--secondary-color);
+}
 #link{
     font-size: 14px;
     margin-bottom: 10px;
