atualização sass novo projeto

--- a/GaleriaFotos/sass/_variables.sass
+++ b/GaleriaFotos/sass/_variables.sass
@@ -1,4 +1,4 @@
 $primary-color: #fa6f6fd2
-$secondary-color: #8bc0ec
-$text-color: #27274dd2
+$secondary-color: #27274dd2
+$text-color: #4b2929ad
 $container-width: 1170px
