--- a/GaleriaFotos/css/styles.css
+++ b/GaleriaFotos/css/styles.css
@@ -7,10 +7,10 @@
 
 body {
   background: linear-gradient(to right, rgba(247, 117, 119, 0.4196078431), #e1eec3);
-  color: rgba(39, 39, 77, 0.8235294118);
+  color: rgba(75, 41, 41, 0.6784313725);
 }
 body a {
-  color: rgba(39, 39, 77, 0.8235294118);
+  color: rgba(75, 41, 41, 0.6784313725);
   text-decoration: none;
   transition: 0.4s;
 }
@@ -32,8 +32,64 @@ body ul {
 .header-navbar ul {
   height: 100%;
   display: flex;
-  align-items: center;
+  aling-itens: center;
   justify-content: center;
+}
+.header-navbar li {
+  margin: 0 1rem;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+}
+.header-navbar .active {
+  color: rgba(39, 39, 77, 0.8235294118);
+}
+.header-navbar a:hover {
+  color: rgba(250, 111, 111, 0.8235294118);
+}
+.header-social-media ul {
+  display: flex;
+  aling-itens: center;
+  justify-content: center;
+  height: 100%;
+}
+.header-social-media ul li {
+  margin: 0 1rem;
+}
+.header-social-media ul li a:hover {
+  color: rgba(250, 111, 111, 0.8235294118);
+}
+
+.gallery {
+  display: flex;
+  aling-itens: center;
+  justify-content: center;
+  max-width: 1170px;
+  padding: 1.5rem 0;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0;
+}
+.gallery-card {
+  width: 31%;
+  height: 400px;
+  margin-bottom: 4%;
+}
+.gallery h2 {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+}
+.gallery a {
+  padding: 0.6rem 2rem;
+  border: 2px solid rgba(250, 111, 111, 0.8235294118);
+  color: rgba(250, 111, 111, 0.8235294118);
+  font-weight: 400;
+  border-radius: 5px;
+}
+.gallery a:hover {
+  background-color: rgba(250, 111, 111, 0.8235294118);
+  color: rgba(39, 39, 77, 0.8235294118);
 }
 
 /*# sourceMappingURL=styles.css.map */
