--- a/GaleriaFotos/sass/_mixins.sass
+++ b/GaleriaFotos/sass/_mixins.sass
@@ -9,3 +9,6 @@
     display: flex
     aling-itens: center
     justify-content: center
+
+@mixin bg-img($img)
+    background-image: url('../$img/#{$img}')
