--- a/GaleriaFotos/sass/styles.sass
+++ b/GaleriaFotos/sass/styles.sass
@@ -93,8 +93,9 @@ body
             background-color: variables.$primary-color
             color: variables.$secondary-color
 
-#card-1
+    #card-1
+       @include mixins.bg-img('animais.jpg')
+
+
+
     
-
-
-
