novo projeto calculadora

--- a/GaleriaFotos/sass/_mixins.sass
+++ b/GaleriaFotos/sass/_mixins.sass
@@ -10,5 +10,17 @@
     aling-itens: center
     justify-content: center
 
+
 @mixin bg-img($img)
     background-image: url('../$img/#{$img}')
+    
+
+//@mixin bg-img($img)
+ //   background-image: url('./img/#{$img}')
+ //   background-size: 100%
+ //   background-position: center
+ //   background-repeat: no-repeat // se a imagem for menor ela não se tepete
+ //   filter: grayscale(100%)
+//    transition: .6s
+
+
