--- a/GaleriaFotos/css/styles.css
+++ b/GaleriaFotos/css/styles.css
@@ -32,7 +32,7 @@ body ul {
 .header-navbar ul {
   height: 100%;
   display: flex;
-  aling-itens: center;
+  align-items: center;
   justify-content: center;
 }
 .header-navbar li {
@@ -48,7 +48,7 @@ body ul {
 }
 .header-social-media ul {
   display: flex;
-  aling-itens: center;
+  align-items: center;
   justify-content: center;
   height: 100%;
 }
@@ -61,7 +61,7 @@ body ul {
 
 .gallery {
   display: flex;
-  aling-itens: center;
+  align-items: center;
   justify-content: center;
   max-width: 1170px;
   padding: 1.5rem 0;
