--- a/styles.css
+++ b/styles.css
@@ -350,8 +350,8 @@ body, a{
 }
 .foto-logo{
     border-radius: 12px;
-    width: 160px;
-    height: 180px;
+    width: 100%;
+    height: 100%;
     position: relative;
 }
 
