--- a/Calculadora/css/styles.css
+++ b/Calculadora/css/styles.css
@@ -34,12 +34,11 @@ body{
     font-weight: 700;
     color: rgb(51, 32, 59);
     letter-spacing: 5px;
-    border-bottom: 3px solid rgb(82, 69, 94);
-    border-left: 3px solid rgb(82, 69, 94);
-    border-right: 3px solid rgb(82, 69, 94);
+    
     border-radius: 5px;
     text-align: center;
     padding: .1rem;
+    box-shadow: 0 0 50px 1px rgb(18, 6, 26);
     
 }
 
@@ -52,11 +51,12 @@ body{
     padding: .5em;
     overflow-wrap: break-word;/*faz com que os números não sai para fora*/
     min-height: 1.6em;
+    font-size: 1.3em;
 }
 
 #current-operation{
     min-height: 1.6em;
-    font-size: 3em;
+    font-size: 2.5em;
     font-weight: 700;
     padding: 0.2em;
     overflow-wrap: break-word;
