--- a/Calculadora/css/styles.css
+++ b/Calculadora/css/styles.css
@@ -34,12 +34,11 @@ body{
     font-weight: 700;
     color: rgb(51, 32, 59);
     letter-spacing: 5px;
-    
     border-radius: 5px;
     text-align: center;
     padding: .1rem;
     box-shadow: 0 0 50px 1px rgb(18, 6, 26);
-    
+    margin-bottom: 8px;
 }
 
 #operations{
@@ -47,11 +46,12 @@ body{
 }
 
 #previous-operation{
-    color: rgb(45, 38, 51);
-    padding: .5em;
+    color: rgb(23, 20, 26);
+    padding: .4em;
     overflow-wrap: break-word;/*faz com que os números não sai para fora*/
     min-height: 1.6em;
-    font-size: 1.3em;
+    font-size: 1.2em;
+    font-weight: 500;
 }
 
 #current-operation{
